add files for css, js. Link to them in html

--- a/ryanplan.html
+++ b/ryanplan.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="whydontiexistyetjaeahwhyohwhy.css" />
+        <script type="text/javascript" src="ryanvsobamatax.js"></script>
     </head>
     <body>
         <div id="container"> <!-- this div exists just to make floating easier -->
