Updated html and added new css

--- a/ryanplan.html
+++ b/ryanplan.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="whydontiexistyetjaeahwhyohwhy.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+		<link href='http://fonts.googleapis.com/css?family=Nobile:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="ryanvsobamatax.js"></script>
     </head>
     <body>
@@ -58,23 +59,25 @@
         </div>
         <div id="ryan_results">
             <h4>Tax Increase Under Ryan</h4>
-            <h2>2013</h2>
-            <h1>$<span class="dollar_results">3873</span></h1>
-            <h4>Your Tax Savings</h4>
-            <p>
-                Probably this has always been the case: once an action is recounted, for intransitive 
-                ends, and no longer in order to act directly upon reality — that is, ﬁnally external to 
-                any function but the very exercise of the symbol — this disjunction occurs, the voice 
-                loses its origin, the author enters his own death, writing begins. Nevertheless, the 
-                feeling about this phenomenon has been variable; in primitive societies, narrative is 
-                    never undertaken by a person, but by a mediator, shaman or speaker, whose “performance” may be admired (that is, his mastery of the narrative code), but not his “genius”
-            </p>
-            <div>
+            <div id="tax_under_ryan_2013">
+				<h2>2013</h2>
+            	<h1>$<span class="dollar_results">3873</span></h1>
+            	<h4>Your Tax Savings</h4>
+            	<p>
+                	Probably this has always been the case: once an action is recounted, for intransitive 
+                	ends, and no longer in order to act directly upon reality — that is, ﬁnally external to 
+                	any function but the very exercise of the symbol — this disjunction occurs, the voice 
+                	loses its origin, the author enters his own death, writing begins. Nevertheless, the 
+                	feeling about this phenomenon has been variable; in primitive societies, narrative is 
+                    never undertaken by a person, but by a mediator, shaman or speaker, whose “performance” may be admired (that is, his 		mastery of the narrative code), but not his “genius”
+            	</p>
+				<div>
                 Boy it would be nice to have some fancy share buttons or some shit here, unfortunately it would approximately double the dev time needed to make this thing work
                 <img src="http://farm3.staticflickr.com/2634/3945387218_fd7b083907.jpg"/>
-            </div>
-        </div>
-        </div><!-- end container -->
+            	</div>
+        	</div>
+		</div>	
+     	</div><!-- end container -->
         <div id="averages"><!-- this is all static, have a party -->
             <h3>The typical American Family With Children</h3>
             <div>
