--- a/ryanplan.html
+++ b/ryanplan.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="whydontiexistyetjaeahwhyohwhy.css" />
         <script type="text/javascript" src="ryanvsobamatax.js"></script>
     </head>
@@ -8,7 +9,7 @@
         <formfield>
             <form action="#">
                 <label for="annual_income_input">Insert Annual Income Here</label>
-                <input type="text" pattern="[/d,]+" autocomplete="off" id="annual_income_input" name="annual_income_input"></input>
+                <input type="text" pattern="^[\d,]+$" placeholder="$" autocomplete="off" id="annual_income_input" name="annual_income_input"></input>
                 <label for="filing_status_select">Select Filing Status</label>
                 <formfield id="filing_status_select">
                     <input name="filing_status" value="single" type="radio">
