add title page to calc

--- a/ryanplan.html
+++ b/ryanplan.html
@@ -37,7 +37,12 @@
                     </formfield>
             </form>
         </formfield>
-        <div id="obama_results">
+        <div id="title_page">
+            <p>
+                Hello! I am here to tell you a thing and convince you to click the little buttons and insert your annual income.
+            </p>
+        </div>
+        <div id="obama_results" style="display: none;">
             <h4>
                 Tax savings under Obama
             </h4>
@@ -58,7 +63,7 @@
                 </p>
             </div>
         </div>
-        <div id="ryan_results">
+        <div id="ryan_results" style="display: none;">
             <h4>Tax Increase Under Ryan</h4>
             <div id="tax_under_ryan_2013">
 				<h2>2013</h2>
