make many js fixes, remaining is fix up input style, fix calculation to be based on % of tax obligation, not income

--- a/ryanplan.html
+++ b/ryanplan.html
@@ -49,7 +49,7 @@
             </h4>
             <div id="tax_under_obama_2013">
                 <h2>2013</h2>
-                <h1>$<span class="dollar_results">3873</span></h1>
+                <h1><span class="dollar_results">$3873</span></h1>
                 <h4>Obama results</h4>
                 <p>
                     On income at least.  Décalage sur un ton décadent ou comment parodier l'esprit gonzo sur Ultra
@@ -60,7 +60,7 @@
             <h4>Romney results</h4>
             <div id="tax_under_romney_2013">
 				<h2>2013</h2>
-            	<h1>$<span class="dollar_results">3873</span></h1>
+            	<h1><span class="dollar_results">$3873</span></h1>
             	<h4>Changes!</h4>
             	<p>
                     One must not introduce reformist illusions about the spectacle, as if it could be eventually improved from within, ameliorated by its own specialists under the supposed control of a better-informed public opinion. To do so would be tantamount to giving revolutionaries’ approval to a tendency, or an appearance of a tendency, in a game that we absolutely must not play; a game that we must reject in its entirety in the name of the fundamental requirements of the revolutionary project, which can in no case produce an aesthetics because it is already entirely beyond the domain of aesthetics. The point is not to engage in some sort of revolutionary art-criticism, but to make a revolutionary critique of all art.
@@ -71,7 +71,7 @@
             <h4>Ryan results</h4>
             <div id="tax_under_ryan_2013">
 				<h2>2013</h2>
-            	<h1>$<span class="dollar_results">3873</span></h1>
+            	<h1><span class="dollar_results">$3873</span></h1>
             	<h4>Your Tax Savings</h4>
             	<p>
                 	Probably this has always been the case: once an action is recounted, for intransitive 
